# kgb-emulator

./: .gitignore  CMakeLists.txt  README.md  makefile
roms/mooneye_tests/: boot_hwio-dmgABCXmgb.gb
src/: bios.cpp  bios.hpp  common_memory_addresses.hpp  cpu.cpp  cpu.hpp  debug.cpp  debug.hpp  disassembler.cpp  disassembler.hpp  exception.hpp  gameboy.cpp  gameboy.hpp  main.cpp  mbc.cpp  mbc.hpp  mmu.cpp  mmu.hpp  ppu.cpp  ppu.hpp  rom.cpp  rom.hpp  timer.cpp  timer.hpp
src/context/: context.cpp  context.hpp
src/disassembler/: decoding.cpp  decoding.hpp  disassembler.cpp  disassembler.hpp
